--- a/projects/spring-boot/server/src/main/resources/public/index.html
+++ b/projects/spring-boot/server/src/main/resources/public/index.html
@@ -6,7 +6,7 @@
 
     <title>Serendipity CEP REST API</title>
 
-    <link rel="icon" type="image/png" href="../favicon.ico">
+    <link rel="icon" type="image/png" href="http://localhost:3001/docs/favicon.ico">
 
     <!-- Needed for adaptive design -->
 
